	  Frysinger)
  nregcomp()
	- Rename the variable flags to eflags so as not to conflict with
	  the global flags. (DLR)
- search.c:
  do_replace_loop()
	- Make sure old_pww is updated to the current value of
	  placewewant when a new match is found, so that edit_redraw()
	  will redraw the screen properly when only placewewant changes.
	  (DLR, found by Mike Frysinger)
- utils.c:
  parse_num()
	- New function to parse numeric values, so that we don't have to
	  duplicate code that calls strtol() all over the place. (David
	  Benbennick)  DLR: Renamed from parse_int() to parse_num() and
	  converted to use ssize_t instead of int.
- winio.c:
  get_kbinput()
	- Since the only valid values for escapes are 0, 1, and 2, 
	  convert it to an int. (DLR)
  get_control_kbinput()
	- Fix erroneous debugging statement so that nano compiles with
	  --enable-debug again. (Jon Oberheide)
  nanogetstr()
	- Tweak the code to update the edit window just before getting
	  statusbar input for efficiency, and update bottomwin just
	  before then too. (David Benbennick)
	- Don't delete the statusbar line on UnCut, since the current
	  version of Pico doesn't. (DLR)
  do_cursorpos()
	- Add assert to check whether totsize is correct. (David
	  Benbennick)
  line_len()
	- Rename to help_line_len() so as not to conflict with the
	  line_len variable used elsewhere, and move inside the
	  DISABLE_HELP #ifdef surrounding do_help() since it's only
	  called in do_help(). (DLR)
  do_help()
	- Have help_line_len() properly return an int again, since its
	  value can't be larger than COLS. (DLR)
	- Allow the user to exit the help browser via Ctrl-C as well as
	  Ctrl-X, for consistency with the file browser. (DLR)
- nanorc.sample:
	- Add sample regexes for patch files. (Mike Frysinger)
	- Various improvements to the "c-file" regexes.  Add double,
	  typedef, extern, union, unsigned, inline, and long to the
	  green list. (Mike Frysinger)  DLR: Also add signed, short, and
	  enum to the green list.